test/class/already_defined.result
{ name: 'Blether Parse Error',
  message: 'Class Foobar already defined',
  line: 2,
  column: 1 }
