test/class/already_defined.st
Object subclass: #Foobar variables: #().
Object subclass: #Foobar variables: #().
